--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@braintree/sanitize-url": "^6.0.2",
     "@mdi/font": "7.0.96",
     "axios": "^1.2.1",
     "eventemitter3": "^5.0.0",
